--- a/style.css
+++ b/style.css
@@ -12,8 +12,6 @@ body {
   background: #2c2141;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: normal;
-  font-size: 16px;
-  line-height: 22px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,7 +23,25 @@ body {
   border-radius: 16px;
   padding: 32px;
   max-width: 624px;
+}
+
+.person {
   display: flex;
+  align-items: flex-start;
+}
+
+.person__dscription {
+  font-size: 16px;
+  margin: 0;
+  line-height: 22px;
+}
+
+.person__image {
+  margin-right: 32px;
+}
+
+.person__info {
+  margin-bottom: 22px;
 }
 
 .person__name {
@@ -34,10 +50,16 @@ body {
   margin: 0;
 }
 
-.person__image {
-  align-self: flex-start;
+.person__position {
+  color: #545454;
+  font-style: italic;
+  font-size: 18px;
+  margin: 0;
 }
-
+.person__dscription--links {
+  margin-top: 22px;
+}
 .links {
   color: #e20613;
+  text-decoration: none;
 }
